--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple todolist web app",
   "main": "index.js",
   "scripts": {
-      "build": "webpack --color --progress",
+      "build": "webpack --color --progress --mode production",
       "start": "webpack serve",
       "lint": "eslint .",
       "lint:css": "stylelint **/*.{css,scss}"
